--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.4.RELEASE</version>
+		<version>2.0.4.RELEASE</version>
 	</parent>
 
 	<modules>
 		<module>fenma-eureka-server</module>
 		<module>fenma-eureka-client</module>
-		<module>fenma-eureka-consumer</module>
+		<!--<module>fenma-eureka-consumer-ribbon</module>-->
 	</modules>
 
 	<properties>
